Uitwerking van de exercise

--- a/index.css
+++ b/index.css
@@ -34,6 +34,22 @@ body {
     background-color: lightgreen;
     color: darkgreen;
 }
+.Automerk {
+    width: 90%;
+    padding: 10px 15px;
+    border: 2px solid darkgreen;
+    border-radius: 5px;
+    background-color: lightgreen;
+    color: darkgreen;
+}
+.Waddeneiland {
+    width: 90%;
+    padding: 10px 15px;
+    border: 2px solid darkgreen;
+    border-radius: 5px;
+    background-color: lightgreen;
+    color: darkgreen;
+}
 h2 {
     color: darkgreen;
 }
